Fix: Very long text should not crash the UI, so the overflow is now hidden.

--- a/modules/cms/ui/themes/default/style/openrat-normalize.less
+++ b/modules/cms/ui/themes/default/style/openrat-normalize.less
@@ -138,6 +138,9 @@ samp,
 time {
   font-family: 'Source Code Pro', monospace, monospace;
   font-size: 1em;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: block;
 }
 
 // Forms ==========================================================================
