--- a/modules/cms/ui/themes/default/style/openrat-workbench.less
+++ b/modules/cms/ui/themes/default/style/openrat-workbench.less
@@ -79,6 +79,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
         &-main {
           flex: 1;
+          min-width: 0; // min-width in a flex context: While the default min-width value is 0 (zero), for flex items it is auto. This can make block elements take up much more space than desired, resulting in overflow.
         }
 
         &-title {
